fix: production-ready playwright base test